# Conways-Game-of-Life

./: CMakeLists.txt  README.md  compile.bat  compile.sh  compile15x15.bat  compile15x15.sh  compile_inplace.bat  compile_inplace.sh  run_random_stable.bat  run_random_stable.sh
inc/: common.hpp  gol.h  gol.hpp
src/: gol.c  gol.cpp  interview.c  main.cpp
